# LiteSearch-Project

./: .gitignore  README.md
backend/: README.md  pyproject.toml
backend/app/: main.py
backend/app/agent/: badcase.py  harness.py  pipeline.py
backend/app/api/: auth_routes.py  gallery_routes.py  routes.py
backend/app/auth/: security.py  store.py
backend/app/gallery/: store.py
backend/app/ingestion/: chunker.py  index_store.py  loader.py  pipeline.py
backend/app/models/: base.py  local_embedding.py  local_llm.py
backend/app/observability/: tracing.py
backend/app/retrieval/: vector_retriever.py
backend/data/corpus/flowers/: babys-breath.md  carnation.md  chamomile.md  champagne-rose.md  cherry-blossom.md  daisy.md  eucalyptus.md  eustoma.md  forget-me-not.md  gardenia.md  hyacinth.md  hydrangea.md  lavender.md  lily-of-the-valley.md  lily.md  peony-mudan.md  peony-shaoyao.md  pink-rose.md  platycodon.md  ranunculus.md  red-rose.md  stock.md  sunflower.md  tulip.md  white-rose.md
backend/data/corpus/knowledge/: aifd-principles.md  care-basics.md  color-603010.md  ikebana-schools.md
backend/data/flowers/: babys-breath.md  carnation.md  chamomile.md  champagne-rose.md  cherry-blossom.md  daisy.md  eucalyptus.md  forget-me-not.md  gardenia.md  hyacinth.md  hydrangea.md  lavender.md  lily-of-the-valley.md  lily.md  peony-mudan.md  peony-shaoyao.md  pink-rose.md  platycodon.md  red-rose.md  sunflower.md  tulip.md  white-rose.md
backend/data/sample_corpus/: agent.md  rag.md
backend/eval/: dataset.json
docs/: agent-design.md  data-sources.md
(+10 files in other folders)
